crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__duplicate_enum_cases.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { enum e { field, field } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (enum_item name: (identifier) cases: (enum_case name: (identifier)) cases: (enum_case name: (identifier))))))))"
---
[
    DuplicateName(
        DuplicateName {
            name: field,
            location: Location {
                filename: FilePath(
                    duplicate_enum_cases.wit,
                ),
                range: Range {
                    start_byte: 30,
                    end_byte: 35,
                    start_point: Point {
                        row: 0,
                        column: 30,
                    },
                    end_point: Point {
                        row: 0,
                        column: 35,
                    },
                },
            },
            original_definition: Location {
                filename: FilePath(
                    duplicate_enum_cases.wit,
                ),
                range: Range {
                    start_byte: 23,
                    end_byte: 28,
                    start_point: Point {
                        row: 0,
                        column: 23,
                    },
                    end_point: Point {
                        row: 0,
                        column: 28,
                    },
                },
            },
        },
    ),
]
