crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__duplicate_flags_cases.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { flags f { field, field } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (flags_item name: (identifier) cases: (flags_case name: (identifier)) cases: (flags_case name: (identifier))))))))"
---
[
    DuplicateName(
        DuplicateName {
            name: "field",
            location: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 31,
                    end_byte: 36,
                    start_point: Point {
                        row: 0,
                        column: 31,
                    },
                    end_point: Point {
                        row: 0,
                        column: 36,
                    },
                },
            },
            original_definition: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 24,
                    end_byte: 29,
                    start_point: Point {
                        row: 0,
                        column: 24,
                    },
                    end_point: Point {
                        row: 0,
                        column: 29,
                    },
                },
            },
        },
    ),
]
