crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__duplicate_identifiers_within_interface.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { record foo {} variant foo {} }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (record_item name: (identifier)))) items: (interface_items (typedef_item (variant_item name: (identifier)))))))"
---
[
    DuplicateName(
        DuplicateName {
            name: foo,
            location: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 28,
                    end_byte: 42,
                    start_point: Point {
                        row: 0,
                        column: 28,
                    },
                    end_point: Point {
                        row: 0,
                        column: 42,
                    },
                },
            },
            original_definition: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 14,
                    end_byte: 27,
                    start_point: Point {
                        row: 0,
                        column: 14,
                    },
                    end_point: Point {
                        row: 0,
                        column: 27,
                    },
                },
            },
        },
    ),
]
