crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__duplicate_resource_methods.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i {\n            resource r {\n                method: func();\n                method: static func();\n            }\n        }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (resource_item name: (identifier) methods: (resource_method (func_item name: (identifier) ty: (func_type params: (param_list)))) methods: (resource_method (static_method name: (identifier) ty: (func_type params: (param_list))))))))))"
---
[
    DuplicateName(
        DuplicateName {
            name: "method",
            location: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 87,
                    end_byte: 109,
                    start_point: Point {
                        row: 3,
                        column: 16,
                    },
                    end_point: Point {
                        row: 3,
                        column: 38,
                    },
                },
            },
            original_definition: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 55,
                    end_byte: 70,
                    start_point: Point {
                        row: 2,
                        column: 16,
                    },
                    end_point: Point {
                        row: 2,
                        column: 31,
                    },
                },
            },
        },
    ),
]
