crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_resource_with_braces.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { resource empty {} }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (resource_item name: (identifier)))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Resource(
                    Resource {
                        name: empty,
                        index: ResourceIndex(0),
                        docs: None,
                        constructor: None,
                        methods: [],
                        static_methods: [],
                    },
                ),
            ],
        },
    },
}
