crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_tuple.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
expression: got
---
Package {
    decl: None,
    worlds: [],
    interfaces: [
        Interface {
            name: i,
            docs: None,
            items: [
                TypeAlias(
                    TypeAlias {
                        name: x,
                        docs: None,
                        ty: Tuple(
                            [],
                        ),
                    },
                ),
            ],
        },
    ],
}
