crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__empty_variant.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { variant v {} }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (variant_item name: (identifier)))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Variant(
                        Variant {
                            name: Ident(
                                Id {
                                    value: 2,
                                },
                            ),
                            index: VariantIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            cases: [],
                        },
                    ),
                ),
            ],
        },
    },
}
