crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__enum_with_multiple_elements.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i {\n            /// This is an enum.\n            enum foo {\n                /// first case.\n                first,\n                /// Second case.\n                /// and another\n                /// doc-comment.\n                second,\n             }\n         }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (enum_item attributes: (attribute (doc_comment (docs))) name: (identifier) cases: (enum_case attributes: (attribute (doc_comment (docs))) name: (identifier)) cases: (enum_case attributes: (attribute (doc_comment (docs))) attributes: (attribute (doc_comment (docs))) attributes: (attribute (doc_comment (docs))) name: (identifier))))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Enum(
                        Enum {
                            name: Ident(
                                Id {
                                    value: 4,
                                },
                            ),
                            index: EnumIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: Some(
                                This is an enum.,
                            ),
                            cases: [
                                EnumCase {
                                    name: Ident(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    docs: Some(
                                        first case.,
                                    ),
                                },
                                EnumCase {
                                    name: Ident(
                                        Id {
                                            value: 3,
                                        },
                                    ),
                                    docs: Some(
                                        Second case.
                                        and another
                                        doc-comment.,
                                    ),
                                },
                            ],
                        },
                    ),
                ),
            ],
        },
    },
}
