crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__enum_with_one_element.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { enum foo { first } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (enum_item name: (identifier) cases: (enum_case name: (identifier))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Enum(
                    Enum {
                        name: foo,
                        index: EnumIndex(0),
                        docs: None,
                        cases: [
                            EnumCase {
                                name: first,
                                docs: None,
                            },
                        ],
                    },
                ),
            ],
        },
    },
}
